# polaris-bg-readings-api

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Dockerfile.tox  Makefile  README.md  pyproject.toml  run_local.sh  tox.ini
.circleci/: config.yml  deploy_azure_dev.sh  run_integration_tests.sh
docs/: make_schema.py  schema.dot  schema.plantuml
gdm_bg_readings_api/: __main__.py  app.py  config.py  trustomer.py
gdm_bg_readings_api/blueprint_api/: __init__.py  controller.py  counts_alerting.py  exceptions.py  percentages_alerting.py  publish.py
gdm_bg_readings_api/blueprint_development/: __init__.py  controller.py
gdm_bg_readings_api/helpers/: cli.py
gdm_bg_readings_api/models/: amber_alert.py  api_spec.py  dose.py  hba1c_reading.py  hba1c_target.py  patient.py  patient_alert.py  prandial_tag.py  reading.py  reading_banding.py  reading_metadata.py  red_alert.py
gdm_bg_readings_api/openapi/: openapi.yaml
gdm_bg_readings_api/query/: softdelete.py
gdm_bg_readings_api/utils/: datetime_utils.py  unittest_mode.py
integration-tests/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  environment.py  reporting.py  requirements.txt
integration-tests/clients/: bg_readings_api_client.py  hba1c_readings_api_client.py  rabbitmq_client.py  wiremock_client.py
integration-tests/features/: alerting.feature  duplicate_bg_readings.feature  hba1c_readings.feature  hba1c_targets.feature  out_of_threshold_readings.feature  reading_filters_stats.feature  reading_updates.feature
integration-tests/helpers/: jwt.py  readings_helper.py
integration-tests/steps/: hba1c_request_steps.py  hba1c_response_steps.py  hba1c_targets.py  messaging_steps.py  request_steps.py  response_steps.py
migrations/versions/: 0fcd5aa539ed_.py  1b7f325e8f0e_.py  22fa67623d95_.py  254b34815457_.py  2eab2fbbfece_.py  3153188409e2_plat_654_fix_bg_readings_post_timeout.py  3a231d87e302_.py  3f30fb1e5fa0_.py  4b1da562a98d_.py  4c93c26f0634_hba1c_target_timestamp.py  537a505b8d46_.py  5ab8a42be883_.py  5eadddc831f2_.py  6389580aa4c2_hba1c_deleted.py  6d04f44a9bf5_meta.py  87bae830fb1e_.py  892f56376a92_.py  8b9ef35d3500_hba1c_target.py  8fdfb572fd2b_.py  92cb53bbc59b_.py  95f6577955d6_.py  a30d3ce6eb56_percentages_alerts.py  a6461e046f3e_correct_bg_unit_spelling.py  ab54f0b42094_.py  aec5b45a6424_.py  c4f2f1883e23_indexes.py  d04a111aa4fc_.py  d8a8dd9d1055_amber_alert.py  de49b379fb06_hba1c.py  e43e8b7886fc_drop_banding_rules_table.py  eead4a2e6a37_hba1c_value_float.py  f0b1cca0e291_.py  facb6f6c8ceb_.py
tests/: conftest.py  test_api.py  test_controller.py  test_counts_alerting.py  test_datetime_utils.py  test_openapi.py  test_percentages_alerting.py  test_publish.py  test_trustomer.py
tests/models/: test_dose.py  test_prandial_tag.py  test_reading.py  test_reading_banding.py  test_reading_metadata.py
(+1 files in other folders)
